Fix the issue with shifting layout - dialog

--- a/src/app/campaigns/campaigns.component.scss
+++ b/src/app/campaigns/campaigns.component.scss
@@ -14,7 +14,8 @@
 mat-dialog-actions {
   display: flex;
   justify-content: flex-start;
-  margin-top: 20px;
+  padding: 0;
+  min-height: 0;
 
   button {
     position: relative;
